# OOP3

./: CMakeLists.txt  main.cpp
include/: array.h  diamond.h  figure.h  figures.h  pentagon.h  point.h  rhombus.h  trapezoid.h
src/: array.cpp  diamond.cpp  figure.cpp  figures.cpp  main.cpp  pentagon.cpp  point.cpp  rhombus.cpp  trapezoid.cpp
test/: main_test.cpp
tests/: test.cpp
